# ragit

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  lefthook.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/docs_rag/: init-docs-rag-db.sql
dags/docs_rag/: common.py  dag.py
dags/docs_rag/embed/: embed_and_upsert.py
dags/docs_rag/embed/utils/: chunking.py  embedder.py  store.py
dags/docs_rag/repo_diff/: aggregate_changes.py  get_repos.py  process_repo.py
dags/docs_rag/repo_diff/utils/: git_ops.py  hashing.py  state.py
docker/: Airflow.Dockerfile  Dockerfile  Dockerfile.rag  MCP.Dockerfile
docs/: architecture.md  design-mcp.md  design.md
mcp_server/: auth.py  db.py  embedder.py  repos.py  search.py  server.py
tests/: conftest.py
tests/_fakes/: fake_embedder.py  fake_reranker.py
tests/integration/: conftest.py
tests/integration/embed/: test_embed_and_upsert.py
tests/integration/embed/utils/: test_store.py
tests/integration/mcp_server/: test_repos.py  test_search_pipeline.py
tests/integration/repo_diff/: test_process_repo.py
tests/integration/repo_diff/utils/: test_state.py
tests/unit/: test_dag_loads.py
tests/unit/embed/: test_embed_and_upsert.py
tests/unit/embed/utils/: test_chunking.py
tests/unit/mcp_server/: test_auth.py  test_db.py  test_search.py  test_server.py
tests/unit/repo_diff/: test_aggregate_changes.py  test_get_repos.py  test_process_repo.py
tests/unit/repo_diff/utils/: test_git_ops.py  test_hashing.py
